Fix search overflow

--- a/src/css/_partial/mobile.styl
+++ b/src/css/_partial/mobile.styl
@@ -138,3 +138,7 @@ p
 	min-height 100%
 .search-input
 	width 80%
+.search-cancel
+	position absolute
+	right 20px
+	top 10px
