--- a/src/css/base.styl
+++ b/src/css/base.styl
@@ -46,6 +46,7 @@ img
   border-radius 2px  
      
 time
+  color rgba(0,0,0,.7)
   font-size 0.825rem  
   &:hover   
     color $thr-clr
